--- a/.github/workflows/primeiro-alura-workflow.yaml
+++ b/.github/workflows/primeiro-alura-workflow.yaml
@@ -41,7 +41,7 @@ jobs:
       # Nesse terceiro step, iniciaremos nosso lint para teste
       - name: Lint
       # Vemos aqui também que estamos utilizando um comando docker para testar nossa aplicação e iniciar nosso lint na máquina virtual
-        run: docker run --rm -itv $(CURDIR):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+        run: docker run --rm -itv $(pwd):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
 
       # E por ultimo após a instalação do nosso lint na máquina virtual, criamos o comando teste para testar alguma aplicação nossa.
       - name: Teste Go
