--- a/.github/workflows/primeiro-alura-workflow.yaml
+++ b/.github/workflows/primeiro-alura-workflow.yaml
@@ -49,4 +49,4 @@ jobs:
       # E por ultimo após a instalação do nosso lint na máquina virtual, criamos o comando teste para testar alguma aplicação nossa.
       - name: Teste Go
       # Comando go para teste da nossa aplicação
-        run: go test -v main_test.go
+        run: DB_HOST=${{ secrets.DB_HOST }} DB_USER =${{ secrets.DB_USER }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go/
