--- a/.github/workflows/primeiro-alura-workflow.yaml
+++ b/.github/workflows/primeiro-alura-workflow.yaml
@@ -41,9 +41,13 @@ jobs:
       # Nesse terceiro step, iniciaremos nosso lint para teste
       - name: Lint
       # Vemos aqui também que estamos utilizando um comando docker para testar nossa aplicação e iniciar nosso lint na máquina virtual
-        run: docker run --rm -itv $(CURDIR):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
+          args: controllers/ database/ models/ routes/
 
       # E por ultimo após a instalação do nosso lint na máquina virtual, criamos o comando teste para testar alguma aplicação nossa.
       - name: Teste Go
-      # Comando go para teste da nossa aplicação
-        run: go test -v main_test.go
+      # Comando go para teste da nossa aplicação usando os parametros secrets que fica na pasta do repositório git, settings, Secrets and Variables e actions
+      # Após isso só adicionar Repositorys Secrets
+        run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
