--- a/.github/workflows/primeiro-alura-workflow.yaml
+++ b/.github/workflows/primeiro-alura-workflow.yaml
@@ -52,7 +52,7 @@ jobs:
       # Após isso só adicionar Repositorys Secrets
         run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
 
-      # Build para entrega do código e deploy
+      # Build para entrega do código e deploy em nuvem
       - name: Build
         run: go build main.go
 
